<resources>
    <string name="app_name">Skillcinema</string>
    <string name="title_home">Домашняя</string>
    <string name="title_search">Поиск</string>
    <string name="title_profile">Профиль</string>
    <string name="rating">10.0</string>
    <string name="_0">0</string>
    <string name="skillcinema">Skillcinema</string>
    <string name="lorem">Значимость этих проблем настолько очевидна, что сложившаяся структура организации играет важную роль в формировании новых предложений. Не следует, однако, забывать о том, что реализация намеченного плана развития напрямую зависит от соответствующих условий активизации. Значимость этих проблем настолько очевидна, что рамки и место обучения кадров позволяет выполнить важнейшие задания по разработке форм воздействия.</string>

    <string name="onboarding1_ru">Узнавай \nо премьерах</string>
    <string name="onboarding2_ru">Создавай \nколлекции</string>
    <string name="onboarding3_ru">Делись \nс друзьями</string>
    <string name="skip_ru">Пропустить</string>

    <string name="premieres_ru">Премьеры</string>
    <string name="top_250_movies_ru">Топ 250 фильмов</string>
    <string name="top_popular_all_ru">Топ популярных</string>

    <string name="staff_in_movie_ru">Над фильмом работали</string>
    <string name="the_film_was_shot_ru">В фильме снимались</string>
    <string name="name_ru">Имя</string>
    <string name="profession_ru">Профессия</string>
    <string name="filmography_ru">Фильмография</string>

    <string name="serials_ru">Сериалы</string>
    <string name="seasons_and_episodes_ru">Сезоны и серии</string>
    <string name="default_seasons_ru">1 сезон</string>
    <string name="default_episodes_ru">1 серия</string>
    <string name="Season_ru">Сезон</string>
    <string name="season_ru">сезон</string>
    <string name="name_serial_ru">Название сериала</string>
    <string name="poster_staff_ru">Постер актера и т.п.</string>
    <string name="episode_number_ru">Номер эпизода</string>
    <string name="actors_ru">Актеры</string>

    <string name="All_ru">Все</string>
    <string name="best_films_ru">Лучшее</string>
    <string name="gallery_ru">Галерея</string>
    <string name="similar_movies_ru">Похожие фильмы</string>
    <string name="in_the_list_ru">К списку</string>
    <string name="name_movie_ru">Название фильма</string>
    <string name="country_ru">Страна</string>
    <string name="duration_ru">Длительность</string>
    <string name="year_ru">Год</string>
    <string name="genre_ru">Жанр</string>
    <string name="searching_ru">Поиск</string>
    <string name="no_result_ru">К сожалению, по вашему запросу\nничего не найдено</string>
    <string name="films_ru">Фильмы</string>
    <string name="advanced_search_ru">Расширенный поиск</string>
    <string name="russia_ru">Россия</string>
    <string name="comedy_ru">Комедия</string>
    <string name="_2024">2024</string>
    <string name="rating_ru">Рейтинг</string>
    <string name="any_ru">Любой</string>
    <string name="date_ru">Дата</string>
    <string name="popular_ru">Популярность</string>
    <string name="sort_ru">Сортировать</string>
    <string name="show_ru">Показывать</string>
    <string name="period_ru">Период</string>
    <string name="choice_ru">Выбрать</string>
    <string name="from_ru">С</string>
    <string name="to_ru">До</string>
    <string name="search_from_ru">Искать в период с</string>
    <string name="search_to_ru">Искать в период до</string>
    <string name="search_ru">Искать</string>
    <string name="search_text_previous_ru">Для начала поиска введите не менее 3-х символов</string>
    <string name="home_ru">Домашняя</string>
    <string name="user_ru">Пользователь</string>
    <string name="welcome_screen_ru">Экран приветствия нового пользователя</string>
    <string name="movie_poster_ru">Постер фильма</string>
    <string name="icon_advanced_search_ru">Иконка расширенного поиска</string>
    <string name="name_collection_ru">Название коллекции</string>
    <string name="release_date_ru">Дата выхода</string>
    <string name="viewed_ru">Просмотрено</string>
    <string name="collections_ru">Коллекции</string>
    <string name="create_collection_ru">Создать свою коллекцию</string>
    <string name="interesting_movies_ru">Вам было интересно</string>
    <string name="icon_like_ru">Иконка - нравится</string>
    <string name="icon_ready_to_view_ru">Иконка - хочу посмотреть</string>
    <string name="icon_viewed_ru">Иконка - просмотрено</string>
    <string name="icon_shared_ru">Иконка - поделиться</string>
    <string name="icon_dots_ru">Иконка - три точки</string>

</resources>