<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    tools:context=".ui.searching.AdvancedSearchFragment">

    <TextView
        android:id="@+id/tv_advanced_search"
        style="@style/TitleTextAppearance18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_advanced_search"
        android:text="@string/show_ru"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:checkable="true"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_advanced_search">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/All"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_films"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/films_ru"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/chip_all"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_serials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serial_ru"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/chip_films"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_title_country"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/country_ru"
        app:layout_constraintStart_toStartOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_1" />

    <TextView
        android:id="@+id/tv_choice_country"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/russia_ru"
        app:layout_constraintEnd_toEndOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_country"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_genre"/>

    <TextView
        android:id="@+id/tv_title_genre"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/genre_ru"
        app:layout_constraintStart_toStartOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_country" />

    <TextView
        android:id="@+id/tv_choice_genre"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/comedy_ru"
        app:layout_constraintEnd_toEndOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_choice_country" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_genre"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_year"/>

    <TextView
        android:id="@+id/tv_title_year"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/year_ru"
        app:layout_constraintStart_toStartOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_genre" />

    <TextView
        android:id="@+id/tv_choice_year"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/_2024"
        app:layout_constraintEnd_toEndOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_choice_genre" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_year"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_rating"/>

    <TextView
        android:id="@+id/tv_title_rating"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/rating_ru"
        app:layout_constraintStart_toStartOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_year" />

    <TextView
        android:id="@+id/tv_choice_rating"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/any"
        app:layout_constraintEnd_toEndOf="@+id/chip_group_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_choice_year" />

    <SeekBar
        android:id="@+id/seekbar_rating"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:max="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_rating"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_rating"
        android:text="@string/sort_ru"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:checkable="true"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_rating">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_ru"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular_ru"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/chip_all"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_ru"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/chip_films"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>