<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="320dp"
    android:foreground="?attr/selectableItemBackground"
    android:padding="4dp">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/movie_poster_ru" />

    <TextView
        android:id="@+id/title"
        style="@style/TitleTextAppearance20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/name_movie_ru"
        android:maxLines="2"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/poster"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/poster" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/genre_ru"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/poster"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:hint="@string/rating"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/poster" />
</androidx.constraintlayout.widget.ConstraintLayout>