<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_staff"
        android:layout_width="0dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/avatars"
        app:layout_constraintDimensionRatio="4:6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/poster_staff_ru" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="18sp"
        android:text="@string/name_ru"
        app:layout_constraintStart_toEndOf="@+id/iv_staff"
        app:layout_constraintTop_toTopOf="@+id/iv_staff"
        app:layout_constraintBottom_toBottomOf="@+id/iv_staff" />

    <TextView
        android:id="@+id/tv_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/profession_ru"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

</androidx.constraintlayout.widget.ConstraintLayout>