<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:padding="4dp">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="0dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="4:6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/title"
        android:maxLines="4"
        android:layout_marginStart="8dp"
        style="@style/TitleTextAppearance20"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/poster" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/year_ru"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/duration_ru"
        android:layout_marginStart="10dp"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/year"
        app:layout_constraintTop_toTopOf="@+id/year" />

    <TextView
        android:id="@+id/country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/country_ru"
        android:maxLines="1"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/year"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:hint="@string/genre_ru"
        android:layout_marginTop="20dp"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/country"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:hint="@string/rating"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/poster" />
</androidx.constraintlayout.widget.ConstraintLayout>