<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.movieinfo.MovieInfoFragment">

    <LinearLayout
        android:id="@+id/linear_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_poster_ru"
                android:scaleType="fitCenter"
                app:layout_constraintDimensionRatio="6:4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <ImageView
                android:id="@+id/iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/icon_like_ru"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_like_border"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintEnd_toEndOf="@+id/iv_poster"
                app:layout_constraintHorizontal_bias="0.3"
                app:layout_constraintStart_toStartOf="@+id/iv_poster" />

            <ImageView
                android:id="@+id/iv_ready_to_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/icon_ready_to_view_ru"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_bookmark_border"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_like" />

            <ImageView
                android:id="@+id/iv_viewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/icon_viewed_ru"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_visibility_off"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_ready_to_view" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/icon_shared_ru"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_share"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_viewed" />

            <ImageView
                android:id="@+id/iv_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/icon_dots_ru"
                android:focusable="true"
                android:padding="5dp"
                android:src="@drawable/ic_dots_3"
                app:layout_constraintBottom_toBottomOf="@+id/iv_poster"
                app:layout_constraintStart_toEndOf="@+id/iv_share" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="10dp"
            android:text="@string/lorem"
            android:textSize="25sp" />


        <LinearLayout
            android:id="@+id/ll_all_episodes1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/TitleTextAppearance25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/seasons_and_episodes_ru"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_all_episodes"
                style="@style/TitleTextAppearance20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/All_ru"
                android:textColor="@color/purple_custom" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_all_episodes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_season"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/default_seasons_ru"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_episodes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/default_episodes_ru"
                android:textSize="17sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleTextAppearance25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/the_film_was_shot_ru" />

            <TextView
                android:id="@+id/tv_count_actors"
                style="@style/TitleTextAppearance20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/_0"
                android:textColor="@color/purple_custom" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_actors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="4"
            tools:listitem="@layout/staff_item" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TitleTextAppearance25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/staff_in_movie_ru" />

            <TextView
                android:id="@+id/tv_count_staff"
                style="@style/TitleTextAppearance20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/_0"
                android:textColor="@color/purple_custom" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/staff_item" />

        <LinearLayout
            android:id="@+id/ll_movie_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/TitleTextAppearance25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/gallery_ru" />

            <TextView
                android:id="@+id/tv_count_images"
                style="@style/TitleTextAppearance20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/_0"
                android:textColor="@color/purple_custom" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_movie_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_image_item" />


        <LinearLayout
            android:id="@+id/ll_similar_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/TitleTextAppearance25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/similar_movies_ru" />

            <TextView
                android:id="@+id/tv_similar_films"
                style="@style/TitleTextAppearance20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/_0"
                android:textColor="@color/purple_custom"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_similar_films"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_item" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>